# TaskManager

./: .gitignore  Dockerfile  README.md  database.db  docker-compose-ci.yaml  requirements.txt
API/: Dockerfile  docker-compose-ci.yaml  pyproject.toml  requirements.txt
API/FlaskAPi/: main.py
API/app/: Dockerfile  __main__.py  __mian__.py  actions.py  api.py  config.py  database.py  db.py  email_send.py  main.py  models.py  schemas.py  settings.py  sqlite.db  tests.py
API/app/db/: database.db  database.py  models.py
API/app/dependencies/: auth.py  db.py  exception.py  project.py  task.py  user.py
API/app/email_send/: email_send.py
API/app/routes/: auth.py  project.py  task.py  user.py
API/app/sql_app/: crud.py  database.py  models.py  schemas.py  sqlite.db
API/app_rt/: __main__.py  main_factory.py
API/db/: Dockerfile
API/sql/: sqlite.db
IOS/ToDo/ToDo.xcodeproj/: project.pbxproj
IOS/ToDo/ToDo/Application/: Info.plist  SceneDelegate.swift
IOS/ToDo/ToDo/Extensions/: Extensions+ScrollView.swift  Extensions+UIView.swift
IOS/ToDo/ToDo/LoginScreen/: LoginInteractor.swift  LoginPresenter.swift  LoginProtocols.swift  LoginRouter.swift  LoginViewController.swift
IOS/ToDo/ToDo/RegisterScreen/: RegisterEntity.swift  RegisterInteractor.swift  RegisterPresenter.swift  RegisterProtocols.swift  RegisterRouter.swift  RegisterViewController.swift
IOS/ToDo/ToDo/Services/: PostRequest.swift
app/: tests.py
app/db/: database.py  models.py
app/dependencies/: project.py  task.py  user.py
app/routes/: __init__.py  auth.py  task.py
db/: tmdb.mwb  tmdb.sql
(+5 files in other folders)
