[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["agrich-8 <a8grich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.44"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
